tests/singleton/singleton.exp
Error ---------------------------------------------------------- boolean.js:8:34

Cannot call `veryOptimistic` with `false` bound to `isThisAwesome` because
boolean is incompatible with boolean literal `true`.


Error --------------------------------------------------------- boolean.js:15:35

Cannot call `veryPessimistic` with `false` bound to `isThisAwesome` because
boolean is incompatible with boolean literal `true`.


Error --------------------------------------------------------- boolean.js:21:12

Cannot return `x` because boolean literal `true` is incompatible with boolean
literal `false`.


Error --------------------------------------------------------- boolean.js:23:12

Cannot return `!x` because boolean literal `true` is incompatible with boolean
literal `false`.


Error: boolean.js:29
 29: bar(1); // error
         ^ number. This type is incompatible with the expected param type of
 19: function bar(x: MyOwnBooleanLOL): false {
                     ^^^^^^^^^^^^^^^ union: boolean literal `true` | boolean literal `false`
  Member 1:
   17: type MyOwnBooleanLOL = true | false
                              ^^^^ boolean literal `true`
  Error:
   29: bar(1); // error
           ^ number. This type is incompatible with
   17: type MyOwnBooleanLOL = true | false
                              ^^^^ boolean literal `true`
  Member 2:
   17: type MyOwnBooleanLOL = true | false
                                     ^^^^^ boolean literal `false`
  Error:
   29: bar(1); // error
           ^ number. This type is incompatible with
   17: type MyOwnBooleanLOL = true | false
                                     ^^^^^ boolean literal `false`

Error ----------------------------------------------------------- number.js:8:12

Cannot call `highlander` with `2` bound to `howMany` because number is
incompatible with number literal `1`.


Error ----------------------------------------------------------- number.js:19:5

Cannot call `bar` with `3` bound to `num` because number is incompatible with
number enum.



Found 7 errors
